// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Body /> Rendering should render the Body in the film mode 1`] = `
<React.Fragment>
  <div
    className="wrapper"
  >
    <Header
      filmInfo={
        Object {
          "budget": 175000000,
          "genres": Array [
            "Adventure",
            "Science Fiction",
            "Action",
          ],
          "id": 333339,
          "overview": "When the creator of a popular video game system dies, a virtual contest is created to compete for his fortune.",
          "poster_path": "https://image.tmdb.org/t/p/w500/pU1ULUq8D3iRxl1fdX2lZIzdHuI.jpg",
          "release_date": "2018-03-28",
          "revenue": 0,
          "runtime": 140,
          "tagline": "A better reality awaits.",
          "title": "Ready Player One",
          "vote_average": 8.1,
          "vote_count": 617,
        }
      }
      filmMode={true}
      searchMode={false}
      setSearchModeCallback={[MockFunction]}
      startSearch={[MockFunction]}
    />
    <Results
      filmMode={true}
      filmModeGenre="action"
      searchInFilmModeByGenre={[MockFunction]}
      searchPhrase="Searching something"
      searchResult={
        Array [
          Object {
            "budget": 175000000,
            "genres": Array [
              "Adventure",
              "Science Fiction",
              "Action",
            ],
            "id": 333339,
            "overview": "When the creator of a popular video game system dies, a virtual contest is created to compete for his fortune.",
            "poster_path": "https://image.tmdb.org/t/p/w500/pU1ULUq8D3iRxl1fdX2lZIzdHuI.jpg",
            "release_date": "2018-03-28",
            "revenue": 0,
            "runtime": 140,
            "tagline": "A better reality awaits.",
            "title": "Ready Player One",
            "vote_average": 8.1,
            "vote_count": 617,
          },
        ]
      }
      setFilmMode={[MockFunction]}
      startSearch={[Function]}
    />
  </div>
  <Footer />
</React.Fragment>
`;

exports[`<Body /> Rendering should render the Body in the search mode 1`] = `
<React.Fragment>
  <div
    className="wrapper"
  >
    <Header
      filmInfo={
        Object {
          "budget": 175000000,
          "genres": Array [
            "Adventure",
            "Science Fiction",
            "Action",
          ],
          "id": 333339,
          "overview": "When the creator of a popular video game system dies, a virtual contest is created to compete for his fortune.",
          "poster_path": "https://image.tmdb.org/t/p/w500/pU1ULUq8D3iRxl1fdX2lZIzdHuI.jpg",
          "release_date": "2018-03-28",
          "revenue": 0,
          "runtime": 140,
          "tagline": "A better reality awaits.",
          "title": "Ready Player One",
          "vote_average": 8.1,
          "vote_count": 617,
        }
      }
      filmMode={false}
      searchMode={true}
      setSearchModeCallback={[MockFunction]}
      startSearch={[MockFunction]}
    />
    <Results
      filmMode={false}
      filmModeGenre="action"
      searchInFilmModeByGenre={[MockFunction]}
      searchPhrase="Searching something"
      searchResult={
        Array [
          Object {
            "budget": 175000000,
            "genres": Array [
              "Adventure",
              "Science Fiction",
              "Action",
            ],
            "id": 333339,
            "overview": "When the creator of a popular video game system dies, a virtual contest is created to compete for his fortune.",
            "poster_path": "https://image.tmdb.org/t/p/w500/pU1ULUq8D3iRxl1fdX2lZIzdHuI.jpg",
            "release_date": "2018-03-28",
            "revenue": 0,
            "runtime": 140,
            "tagline": "A better reality awaits.",
            "title": "Ready Player One",
            "vote_average": 8.1,
            "vote_count": 617,
          },
        ]
      }
      setFilmMode={[MockFunction]}
      startSearch={[Function]}
    />
  </div>
  <Footer />
</React.Fragment>
`;

exports[`<Body /> Rendering should render the Body with empty search result in search mode 1`] = `
<React.Fragment>
  <div
    className="wrapper"
  >
    <Header
      filmInfo={
        Object {
          "budget": 175000000,
          "genres": Array [
            "Adventure",
            "Science Fiction",
            "Action",
          ],
          "id": 333339,
          "overview": "When the creator of a popular video game system dies, a virtual contest is created to compete for his fortune.",
          "poster_path": "https://image.tmdb.org/t/p/w500/pU1ULUq8D3iRxl1fdX2lZIzdHuI.jpg",
          "release_date": "2018-03-28",
          "revenue": 0,
          "runtime": 140,
          "tagline": "A better reality awaits.",
          "title": "Ready Player One",
          "vote_average": 8.1,
          "vote_count": 617,
        }
      }
      filmMode={false}
      searchMode={true}
      setSearchModeCallback={[MockFunction]}
      startSearch={[MockFunction]}
    />
    <Results
      filmMode={false}
      filmModeGenre="action"
      searchInFilmModeByGenre={[MockFunction]}
      searchPhrase="Searching something"
      searchResult={Array []}
      setFilmMode={[MockFunction]}
      startSearch={[Function]}
    />
  </div>
  <Footer />
</React.Fragment>
`;
